--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>de.hawhh.osbsp.Haw_bs_vmem</exec.mainClass>
+        <exec.mainClass>de.hawhh.osbsp.SimulationEnv</exec.mainClass>
     </properties>
 </project>
